ImmutableList#of has been replaced with more efficient methods